fix ugly scrollbar when no option has been chosen yet

--- a/Frontend/src/app/screens/login-dialog/login-dialog.component.scss
+++ b/Frontend/src/app/screens/login-dialog/login-dialog.component.scss
@@ -1,3 +1,4 @@
 .limit-width {
   width: 300px;
+  min-height: 35px;
 }
